# config-lens

./: .gitignore  CHANGELOG.md  ConfigLens.spec  README.md  config-lens.spec  main.py  pyproject.toml  taskfile.yml
.github/: copilot-instructions.md
.github/agents/: design-reviewer.agent.md  implementation.agent.md  issue-driven-dev.agent.md  refactor.agent.md  test-writer.agent.md
.github/instructions/: python.instructions.md  tests.instructions.md
.github/workflows/: ci.yml
docs/: BUILD.md  README.md  TROUBLESHOOTING.md  architecture.md  contributing.md  development.md  index.md  user-guide.md
docs/widgets/: config_textbox.md
scripts/: generate_icon.py
src/: app.py  cli.py  diff.py  ignore.py  main.py  menu.py  utils.py
src/compare/: __init__.py  ai_review.py  folder_logic.py  ignore.py  logic.py  normalizer.py  open_view.py  platforms.py  result_window.py  settings.py  view.py
src/services/: cisco_config.py  diff_analyzer.py
src/ui/: main_window.py
src/ui/widgets/: config_textbox.py  custom_button.py
src/validate/: __init__.py  logic.py  view.py
tests/: test_cli.py  test_diff.py  test_utils.py
tests/compare/: __init__.py  test_ai_review.py  test_folder_logic.py  test_ignore.py  test_logic.py  test_normalizer.py
tests/fixtures/: cisco_add.txt  cisco_running-config_default.txt  cisco_running-config_future.txt  demo_input.txt  demo_source.txt  demo_target.txt  source.txt  target.txt
tests/fixtures/eBGP/: after.txt  (+2 more)
tests/services/: test_cisco_config.py  test_diff_analyzer.py
tests/ui/: __init__.py
tests/validate/: test_logic.py
(+7 files in other folders)
