[project]
name = "01-config-lens"
version = "0.4.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "customtkinter>=5.2.2",
    "hier-config>=3.4.1",
    "platformdirs>=4.9.2",
    "pyinstaller>=6.19.0",
    "tkinterdnd2>=0.4.2",
]

[dependency-groups]
dev = [
    "pillow>=12.1.1",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pyyaml>=6.0.3",
    "ruff>=0.15.2",
]
